--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -64,6 +64,12 @@
 <body>
 
 	<div class="m adapter-container">
+      <div class="col s12">
+        <ul class="tabs">
+          <li class="tab col s3"><a href="#tab-main" class="translate active">Main settings</a></li>
+        </ul>
+      </div>
+      <div id="tab-main" class="col s12 page">
 
 		<div class="row">
 			<div class="col s12 m4 l2">
@@ -72,20 +78,55 @@
 		</div>
 
 		<!-- Put your content here -->
-
-		<!-- For example columns with settings: -->
-		<div class="row">
-			<div class="col s6 input-field">
-				<input type="checkbox" class="value" id="option1" />
-				<label for="option1" class="translate">option1</label>
+        <div class="row">
+			<div class="col s2 input-field tooltip">	
+				<input type="text" class="value" maxLength="15" id="ipaddress"/>
+				<label for="ipaddress" class="translate">IP-Address</label>
+				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+				<span class="tooltiptext translate">Please enter the IP-Address from your SolarView data logger</span>
 			</div>
-
-			<div class="col s6 input-field">
-				<input type="text" class="value" id="option2" />
-				<label for="option2" class="translate">option2</label>
+			<div class="col s2 input-field tooltip">	
+				<input type="text" class="value" maxLength="5" id="port"/>
+				<label for="port" class="translate">Port</label>
+				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+				<span class="tooltiptext translate">Please enter the port</span>
 			</div>
 		</div>
-
+        <div class="row">
+			<div class="col s2 input-field tooltip">	
+				<input type="text" class="value" maxLength="15" id="interval"/>
+				<label for="interval" class="translate">Interval</label>
+				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+				<span class="tooltiptext translate">Please enter the interval (cron format)</span>
+			</div>
+			<div class="col s2 input-field tooltip">	
+				<input type="text" class="value" maxLength="8" id="intervalstart"/>
+				<label for="intervalstart" class="translate">Interval start</label>
+				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+				<span class="tooltiptext translate">Please enter the interval start (00:00:00)</span>
+			</div>
+			<div class="col s2 input-field tooltip">	
+				<input type="text" class="value" maxLength="8" id="intervalend"/>
+				<label for="intervalend" class="translate">Interval end</label>
+				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+				<span class="tooltiptext translate">Please enter the interval end (00:00:00)</span>
+			</div>
+        </div>
+        <div class="row">
+			<div class="col s2 input-field tooltip">	
+				<input type="checkbox" class="value" maxLength="15" id="d0converter"/>
+				<label for="d0converter" class="translate">d0-converter</label>
+				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+				<span class="tooltiptext translate">Please enter if you have a d0-converter </span>
+			</div>
+			<div class="col s2 input-field tooltip">	
+				<input type="checkbox" class="value" maxLength="15" id="s0converter"/>
+				<label for="s0converter" class="translate">s0-converter</label>
+				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+				<span class="tooltiptext translate">Please enter if you have a s0-converter </span>
+			</div>
+		</div>
+	  </div>
 	</div>
 
 </body>
