--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -119,13 +119,26 @@
 				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
 				<span class="tooltiptext translate">Please enter if you have a d0-converter </span>
 			</div>
-			<div class="col s2 input-field tooltip">	
+			<!--div class="col s2 input-field tooltip">	
 				<input type="checkbox" class="value" maxLength="15" id="s0converter"/>
 				<label for="s0converter" class="translate">s0-converter</label>
-				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
 				<span class="tooltiptext translate">Please enter if you have a s0-converter </span>
-			</div>
+			</div-->
 		</div>
+		<div class="row">
+			<div class="col s12 m6">
+			  <div class="card blue-grey darken-1">
+				<div class="card-content white-text">
+				  <span class="card-title">SolarView</span>
+				  <p>Data logger and web based analysis software for Solarmax, 
+				  SMA, Kaco, Fronius and Kostal inverters. For more information please click the link.</p>
+				</div>
+				<div class="card-action">
+				  <a href="http://www.solarview.info/solarlogger.aspx">SolarView</a>
+				</div>
+			  </div>
+			</div>
+		</div>		
 	  </div>
 	</div>
 
