--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -19,6 +19,7 @@
 
 	<script type="text/javascript">
 		// This will be called by the admin adapter when the settings page loads
+		
 		function load(settings, onChange) {
 			// example: select elements with id=key and class=value and insert value
 			if (!settings) return;
@@ -70,70 +71,57 @@
         </ul>
       </div>
       <div id="tab-main" class="col s12 page">
-
 		<div class="row">
-			<div class="col s12 m4 l2">
+			<div class="col s12 m6 l2">
 				<img src="solarviewdatareader.png" class="logo">
 			</div>
 		</div>
-
 		<!-- Put your content here -->
-        <div class="row">
-			<div class="col s2 input-field tooltip">	
-				<input type="text" class="value" maxLength="15" id="ipaddress"/>
-				<label for="ipaddress" class="translate">IP-Address</label>
-				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
-				<span class="tooltiptext translate">Please enter the IP-Address from your SolarView data logger</span>
-			</div>
-			<div class="col s2 input-field tooltip">	
-				<input type="text" class="value" maxLength="5" id="port"/>
-				<label for="port" class="translate">Port</label>
-				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
-				<span class="tooltiptext translate">Please enter the port</span>
-			</div>
-		</div>
-        <div class="row">
-			<div class="col s2 input-field tooltip">	
-				<input type="text" class="value" maxLength="15" id="interval"/>
-				<label for="interval" class="translate">Interval</label>
-				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
-				<span class="tooltiptext translate">Please enter the interval (cron format)</span>
-			</div>
-			<div class="col s2 input-field tooltip">	
-				<input type="text" class="value" maxLength="8" id="intervalstart"/>
-				<label for="intervalstart" class="translate">Interval start</label>
-				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
-				<span class="tooltiptext translate">Please enter the interval start (00:00:00)</span>
-			</div>
-			<div class="col s2 input-field tooltip">	
-				<input type="text" class="value" maxLength="8" id="intervalend"/>
-				<label for="intervalend" class="translate">Interval end</label>
-				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
-				<span class="tooltiptext translate">Please enter the interval end (00:00:00)</span>
-			</div>
-        </div>
-        <div class="row">
-			<div class="col s2 input-field tooltip">	
-				<input type="checkbox" class="value" maxLength="15" id="d0converter"/>
-				<label for="d0converter" class="translate">d0-converter</label>
-				<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
-				<span class="tooltiptext translate">Please enter if you have a d0-converter</span>
-			</div>
-			<!--div class="col s2 input-field tooltip">	
-				<input type="checkbox" class="value" maxLength="15" id="s0converter"/>
-				<label for="s0converter" class="translate">s0-converter</label>
-				<span class="tooltiptext translate">Please enter if you have a s0-converter </span>
-			</div-->
-		</div>
 		<div class="row">
-			<div class="col s12 m6">
-			  <div class="card blue-grey darken-1">
-				<div class="card-content white-text">
-				  <span class="card-title">SolarView</span>
-				  <p class="translate">Data logger and web based analysis software for Solarmax, SMA, Kaco, Fronius and Kostal inverters. For more information please click the link.</p>
-				</div>
-				<div class="card-action">
-				  <a href="http://www.solarview.info/solarlogger.aspx">SolarView</a>
+			<div class="col s12 m8">
+			  <div class="card blue lighten-4">
+				<div class="card-content black-text">
+				  <span class="card-title black-text">SolarView Data Reader</span>
+					<div class="row">
+					  <div class="col s3 input-field tooltip">	
+						<input type="text" class="value" maxLength="15" id="ipaddress"/>
+						<label for="ipaddress" class="translate">IP-Address</label>
+						<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+						<span class="tooltiptext translate">Please enter the IP-Address from your SolarView data logger</span>
+					  </div>
+					  <div class="col s2 input-field tooltip">	
+						<input type="text" class="value" maxLength="5" id="port"/>
+						<label for="port" class="translate">Port</label>
+						<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+						<span class="tooltiptext translate">Please enter the port</span>
+					  </div>
+					  <div class="col s3 input-field tooltip">	
+						<input type="checkbox" class="value" id="d0converter"/>
+						<label for="d0converter" class="translate black-text">d0-converter</label>
+						<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+						<span class="tooltiptext translate">Please enter if you have a d0-converter</span>
+					  </div>
+					</div>
+					<div class="row">
+						<div class="col s2 input-field tooltip">	
+							<input type="text" class="value" maxLength="15" id="interval"/>
+							<label for="interval" class="translate">Interval</label>
+							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+							<span class="tooltiptext translate">Please enter the interval (cron format)</span>
+						</div>
+						<div class="col s2 input-field tooltip">	
+							<input type="text" class="value" maxLength="8" id="intervalstart"/>
+							<label for="intervalstart" class="translate">Interval start</label>
+							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+							<span class="tooltiptext translate">Please enter the interval start (00:00:00)</span>
+						</div>
+						<div class="col s2 input-field tooltip">	
+							<input type="text" class="value" maxLength="8" id="intervalend"/>
+							<label for="intervalend" class="translate">Interval end</label>
+							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+							<span class="tooltiptext translate">Please enter the interval end (00:00:00)</span>
+						</div>
+					</div>					
 				</div>
 			  </div>
 			</div>
