--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -122,6 +122,20 @@
 							<span class="tooltiptext translate">Please enter the interval end (00:00:00)</span>
 						</div>
 					</div>					
+					<div class="row">
+						<div class="col s4 input-field tooltip">	
+							<input type="checkbox" class="value" id="setCCU"/>
+							<label for="setCCU" class="translate">System variable CCU setzen</label>
+							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+							<span class="tooltiptext translate">Please check if you want to set a system variable in the CCU</span>
+						</div>
+						<div class="col s4 input-field tooltip">	
+							<input type="text" class="value" id="CCUSystemV"/>
+							<label for="CCUSystemV" class="translate">System variable</label>
+							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
+							<span class="tooltiptext translate">Please enter the CCU system variable</span>
+						</div>
+					</div>					
 				</div>
 			  </div>
 			</div>
