Übersetzung angepasst. Cron Parser und Timepicker eingebaut. Version erhöht

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -58,6 +58,17 @@
 			});
 			callback(obj);
 		}
+		
+		document.addEventListener('DOMContentLoaded', function() {
+			var elems = document.querySelectorAll('.timepicker');
+			var opt = {
+			  showClearBtn: true,
+			  defaultTime: 'now',
+			  //autoClose: true,
+			  twelveHour: false
+			};
+			var instances = M.Timepicker.init(elems, opt);
+		});
 	</script>
 
 </head>
@@ -86,19 +97,16 @@
 					  <div class="col s3 input-field tooltip">	
 						<input type="text" class="value" maxLength="15" id="ipaddress"/>
 						<label for="ipaddress" class="translate">IP-Address</label>
-						<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
 						<span class="tooltiptext translate">Please enter the IP-Address from your SolarView data logger</span>
 					  </div>
 					  <div class="col s2 input-field tooltip">	
 						<input type="text" class="value" maxLength="5" id="port"/>
 						<label for="port" class="translate">Port</label>
-						<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
 						<span class="tooltiptext translate">Please enter the port</span>
 					  </div>
 					  <div class="col s3 input-field tooltip">	
 						<input type="checkbox" class="value" id="d0converter"/>
 						<label for="d0converter" class="translate black-text">d0-converter</label>
-						<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
 						<span class="tooltiptext translate">Please enter if you have a d0-converter</span>
 					  </div>
 					</div>
@@ -106,33 +114,28 @@
 						<div class="col s2 input-field tooltip">	
 							<input type="text" class="value" maxLength="15" id="interval"/>
 							<label for="interval" class="translate">Interval</label>
-							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
 							<span class="tooltiptext translate">Please enter the interval (cron format)</span>
 						</div>
 						<div class="col s2 input-field tooltip">	
-							<input type="text" class="value" maxLength="8" id="intervalstart"/>
+							<input type="text" class="timepicker value" id="intervalstart"/>
 							<label for="intervalstart" class="translate">Interval start</label>
-							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
-							<span class="tooltiptext translate">Please enter the interval start (00:00:00)</span>
+							<span class="tooltiptext translate">Please enter the interval start (00:00)</span>
 						</div>
 						<div class="col s2 input-field tooltip">	
-							<input type="text" class="value" maxLength="8" id="intervalend"/>
+							<input type="text" class="timepicker value" id="intervalend"/>
 							<label for="intervalend" class="translate">Interval end</label>
-							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
-							<span class="tooltiptext translate">Please enter the interval end (00:00:00)</span>
+							<span class="tooltiptext translate">Please enter the interval end (00:00)</span>
 						</div>
 					</div>					
 					<div class="row">
 						<div class="col s4 input-field tooltip">	
 							<input type="checkbox" class="value" id="setCCU"/>
 							<label for="setCCU" class="translate">System variable CCU setzen</label>
-							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
 							<span class="tooltiptext translate">Please check if you want to set a system variable in the CCU</span>
 						</div>
 						<div class="col s4 input-field tooltip">	
 							<input type="text" class="value" id="CCUSystemV"/>
 							<label for="CCUSystemV" class="translate">System variable</label>
-							<!--span class="helper-text" data-error="wrong" data-success="right">Helper text</span-->
 							<span class="tooltiptext translate">Please enter the CCU system variable</span>
 						</div>
 					</div>					
