--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -111,6 +111,28 @@
 					  </div>
 					</div>
 					<div class="row">
+					  <div class="col s3 input-field tooltip">	
+						<input type="checkbox" class="value" id="pvi1"/>
+						<label for="pvi1" class="translate">Inverter 1</label>
+						<span class="tooltiptext translate">Please check if inverter 1 available</span>
+					  </div>
+					  <div class="col s3 input-field tooltip">	
+						<input type="checkbox" class="value" id="pvi2"/>
+						<label for="pvi2" class="translate">Inverter 2</label>
+						<span class="tooltiptext translate">Please check if inverter 2 available</span>
+					  </div>
+					  <div class="col s3 input-field tooltip">	
+						<input type="checkbox" class="value" id="pvi3"/>
+						<label for="pvi3" class="translate">Inverter 3</label>
+						<span class="tooltiptext translate">Please check if inverter 3 available</span>
+					  </div>
+					  <div class="col s3 input-field tooltip">	
+						<input type="checkbox" class="value" id="pvi4"/>
+						<label for="pvi4" class="translate">Inverter 4</label>
+						<span class="tooltiptext translate">Please check if inverter 4 available</span>
+					  </div>
+					</div>
+					<div class="row">
 						<div class="col s2 input-field tooltip">	
 							<input type="text" class="value" maxLength="15" id="interval"/>
 							<label for="interval" class="translate">Interval</label>
