--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -134,11 +134,11 @@
 					  </div>
 					</div>
 					<div class="row">
-						<div class="col s2 input-field tooltip">	
-							<input type="text" class="value" maxlength="15" id="interval"/>
-							<label for="interval" class="translate">Interval</label>
-							<span class="tooltiptext translate">Please enter the interval (cron format)</span>
-						</div>
+						<div class="col s2 input-field tooltip">
+							<input type="number" class="value" min="1" max="59" id="intervalVal" />
+							<label for="intervalVal" class="translate">polling interval in minutes</label>
+							<span class="tooltiptext translate">Here you can define the polling interval [between 1 to 59 minutes]</span>
+						</div>						
 						<div class="col s2 input-field tooltip">	
 							<input type="text" class="timepicker value" id="intervalstart"/>
 							<label for="intervalstart" class="translate">Interval start</label>
