Error handling optimized, S0 meter implemented

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -112,6 +112,33 @@
 					  </div>
 					</div>
 					<div class="row">
+						<div class="col s4 input-field tooltip">	
+						  <input type="checkbox" class="value" id="scm1"/>
+						  <label for="scm1" class="translate">Self consumption meter 1</label>
+						  <span class="tooltiptext translate">Please check if self consumption meter 1 is available</span>
+						</div>
+						<div class="col s4 input-field tooltip">	
+						  <input type="checkbox" class="value" id="scm2"/>
+						  <label for="scm2" class="translate">Self consumption meter 2</label>
+						  <span class="tooltiptext translate">Please check if self consumption meter 2 is available</span>
+						</div>
+						<div class="col s4 input-field tooltip">	
+						  <input type="checkbox" class="value" id="scm3"/>
+						  <label for="scm3" class="translate">Self consumption meter 3</label>
+						  <span class="tooltiptext translate">Please check if self consumption meter 3 is available</span>
+						</div>
+						<div class="col s4 input-field tooltip">	
+						  <input type="checkbox" class="value" id="scm4"/>
+						  <label for="scm4" class="translate">Self consumption meter 4</label>
+						  <span class="tooltiptext translate">Please check if self consumption meter 4 is available</span>
+						</div>
+						<div class="col s4 input-field tooltip">	
+							<input type="checkbox" class="value" id="scm5"/>
+							<label for="scm5" class="translate">Self consumption meter 5</label>
+							<span class="tooltiptext translate">Please check if self consumption meter 5 is available</span>
+						  </div>
+						</div>
+  					<div class="row">
 					  <div class="col s3 input-field tooltip">	
 						<input type="checkbox" class="value" id="pvi1"/>
 						<label for="pvi1" class="translate">Inverter 1</label>
