--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -113,6 +113,11 @@
 					</div>
 					<div class="row">
 						<div class="col s4 input-field tooltip">	
+						  <input type="checkbox" class="value" id="scm0"/>
+						  <label for="scm0" class="translate">Self consumption meter sum</label>
+						  <span class="tooltiptext translate">Please check if you use the self consumption meter sum</span>
+						</div>
+						<div class="col s4 input-field tooltip">	
 						  <input type="checkbox" class="value" id="scm1"/>
 						  <label for="scm1" class="translate">Self consumption meter 1</label>
 						  <span class="tooltiptext translate">Please check if self consumption meter 1 is available</span>
@@ -128,14 +133,9 @@
 						  <span class="tooltiptext translate">Please check if self consumption meter 3 is available</span>
 						</div>
 						<div class="col s4 input-field tooltip">	
-						  <input type="checkbox" class="value" id="scm4"/>
-						  <label for="scm4" class="translate">Self consumption meter 4</label>
-						  <span class="tooltiptext translate">Please check if self consumption meter 4 is available</span>
-						</div>
-						<div class="col s4 input-field tooltip">	
-							<input type="checkbox" class="value" id="scm5"/>
-							<label for="scm5" class="translate">Self consumption meter 5</label>
-							<span class="tooltiptext translate">Please check if self consumption meter 5 is available</span>
+							<input type="checkbox" class="value" id="scm4"/>
+							<label for="scm4" class="translate">Self consumption meter 4</label>
+							<span class="tooltiptext translate">Please check if self consumption meter 4 is available</span>
 						  </div>
 						</div>
   					<div class="row">
