--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -186,7 +186,7 @@
 						<div class="col s4 input-field tooltip">	
 							<input type="text" class="value" id="CCUSystemV"/>
 							<label for="CCUSystemV" class="translate">System variable</label>
-							<span class="tooltiptext translate">Please enter the CCU system variable</span>
+							<span class="tooltiptext translate">System variable e.g. hm-rega.0.12345</span>
 						</div>
 					</div>					
 				</div>
