--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -70,6 +70,7 @@
 			};
 			var instances = M.Timepicker.init(elems, opt);
 		});
+
 	</script>
 
 </head>
@@ -107,7 +108,7 @@
 					  </div>
 					  <div class="col s3 input-field tooltip">	
 						<input type="checkbox" class="value" id="d0converter"/>
-						<label for="d0converter" class="translate black-text">d0-converter</label>
+						<label for="d0converter" class="translate">d0-converter</label>
 						<span class="tooltiptext translate">Please enter if you have a d0-converter</span>
 					  </div>
 					</div>
@@ -169,12 +170,12 @@
 						<div class="col s2 input-field tooltip">	
 							<input type="text" class="timepicker value" id="intervalstart"/>
 							<label for="intervalstart" class="translate">Interval start</label>
-							<span class="tooltiptext translate">Please enter the interval start (00:00)</span>
+							<span class="tooltiptext translate">Please enter the interval start (e.g. 00:00)</span>
 						</div>
 						<div class="col s2 input-field tooltip">	
 							<input type="text" class="timepicker value" id="intervalend"/>
 							<label for="intervalend" class="translate">Interval end</label>
-							<span class="tooltiptext translate">Please enter the interval end (00:00)</span>
+							<span class="tooltiptext translate">Please enter the interval end (e.g. 23:59)</span>
 						</div>
 					</div>					
 					<div class="row">
